@@ -1,6 +1,6 @@
 package leetcode.problems;
 
-import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 /**
@@ -9,21 +9,28 @@ import java.util.List;
  */
 public class LeetCode78 {
 
+    List<List<Integer>> res = new LinkedList<>();
+    // 记录回溯算法的递归路径
+    LinkedList<Integer> track = new LinkedList<>();
+
+    // 主函数
     public List<List<Integer>> subsets(int[] nums) {
-        if (nums == null || nums.length == 0) {
-            return new ArrayList<>(new ArrayList<>());
-        }
-        List<List<Integer>> res = new ArrayList<>();
-        helper(nums, res, 0, new ArrayList<>());
+        backtrack(nums, 0);
         return res;
     }
 
-    private void helper(int[] nums, List<List<Integer>> res, int index, ArrayList<Integer> temp) {
-        res.add(new ArrayList<>(temp));
-        for (int i = index; i < nums.length; i++) {
-            temp.add(i);
-            helper(nums, res, i + 1, temp);
-            temp.remove(temp.size() - 1);
+    // 回溯算法核心函数，遍历子集问题的回溯树
+    void backtrack(int[] nums, int start) {
+        // 前序位置，每个节点的值都是一个子集
+        res.add(new LinkedList<>(track));
+        // 回溯算法标准框架
+        for (int i = start; i < nums.length; i++) {
+            // 做选择
+            track.addLast(nums[i]);
+            // 通过 start 参数控制树枝的遍历，避免产生重复的子集
+            backtrack(nums, i + 1);
+            // 撤销选择
+            track.removeLast();
         }
     }
 }
